# any-conqueror

./: .clang-format  .clangd  .gitignore  README.md
app/src/main/: global.h  systems.h  utils.h  vma_impl.cpp
app/src/main/res/shaders/: main.vert
examples/: CMakeLists.txt
examples/0_working_vk_guide/: CMakeLists.txt
examples/0_working_vk_guide/src/core/: core.hpp  logger.hpp  utils.hpp
examples/0_working_vk_guide/src/main/: global.hpp  main.cpp
examples/0_working_vk_guide/src/main/assets/shaders/: shader.slang
examples/0_working_vk_guide/src/main/systems/: app_vk_system.hpp
examples/1_working_vk_clear_color/: CMakeLists.txt
examples/1_working_vk_clear_color/src/main/: app.c  global.h  main.c  systems.h  utils.h
examples/2_working_triangle/: CMakeLists.txt
examples/2_working_triangle/src/main/: global.h  main.c  systems.h
examples/2_working_triangle/src/main/assets/shaders/: test.frag.spv  test.vert.spv
examples/2_working_triangle/src/main/res/shaders/: test.frag  test.vert
examples/3_working_ssbos/: CMakeLists.txt
examples/3_working_ssbos/src/main/: global.h  main.c
examples/3_working_ssbos/src/main/assets/shaders/: main.frag.spv  main.vert.spv
examples/3_working_ssbos/src/main/res/shaders/: main.frag
